2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config/ipmi-config-category-dcmi-dcmi-conf-section.c (asset_tag_commit):
	Add workaround for Supermicro motherboard.
	
2015-07-27 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-chassis-boot-flags.c (_get_boot_flags):
	Fix debug message output error.
	
2015-06-24 Albert Chu <chu11@llnl.gov>

	* Update copyright year globally.
	
2015-06-01 Albert Chu <chu11@llnl.gov>

	* Audit and fix all strtol parse corner cases.

2015-06-01 James Buren <ryu0@ymail.com>

	* ipmi-config/ipmi-config-argp.c (_ipmi_config_parse_channel_number):
	Fix strtol parse corner case.
	
2015-04-02 Albert Chu <chu11@llnl.gov>

	* man/ipmiconsole.8.pre.in: Remove duplicate information.  (bug
	#44698)
	
2015-01-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/libcommon/ipmi-crypt.c (crypt_init): Only call
	gcry_control w/ GCRYCTL_SET_THREAD_CBS once.  It appears newer
	version of libgcrypt cannot handle entering this function
	simulatenously by multiple threads, leading to segfaults.

2015-01-06 Albert Chu <chu11@llnl.gov>

	* common/toolcommon/tool-cmdline-common.c: Fix parsing corner case
	with --fanout option.
	
2014-12-10 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-user-sections.c (_set_user_access):
	Workaround issue on Supermicro X10DDW-i.

2014-12-10 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-pef-alert-policy-table.c (_set_alert_policy_table):
	Use convenience function ipmi_config_find_section appropriately.
	
2014-12-09 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-lan-conf-section.c: Fix
	vlan_id from uint8_t to uint16_t.

	Found by jbd at jbdenis dot net
	
2014-12-09 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Support Get Device SDR Info, Get Device SDR, and
	Reserve Device SDR Repository commands in API as needed.

2014-11-14 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/driver/ipmi-sunbmc-driver.c,
	libfreeipmi/driver/ipmi-ssif-driver.c,